# TM3SO

./: CMakeLists.txt
fat16/image/: disk.img
fat16/src/: commands.c  commands.h  copiar.c  fat16.c  main.c  mover.c  remover.c  support.c  support.h
